[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pytroll_monitor/version.py"

[project]
name = "pytroll-monitor"
dynamic = ["version"]
description = "Monitoring tools for pytroll production runners"
readme = "README.md"
license = "GPLv3+"
license-files = ["LICENSE"]
authors = [
    { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" },
    { name = "Adam Dybbroe" },
]

[project.optional-dependencies]
Op5 = [
    "requests",
]

