[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pytroll_monitor/version.py"

[project]
name = "pytroll-monitor"
dynamic = ["version"]
description = "Monitoring tools for pytroll production runners"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" },
    { name = "Adam Dybbroe" },
]
dependencies = [
    "pyyaml[op5]>=6.0.3",
    "requests-mock[test]>=1.12.1",
]

[project.optional-dependencies]
Op5 = [
    "requests",
]

test = [
    "pytest>=8.3.5",
]
